# hidusbgd

./: .gitignore  CMakeLists.txt  README.md
code/: hid_device.hpp  hid_device_overview.hpp  hidusb.hpp  register_types.cpp  register_types.hpp
doc_classes/: HIDUSB.xml
sample/: icon.svg.import  project.godot
sample/addons/hidusbgd/: libhidusbgd.gdextension
sample/addons/hidusbgd/libhidusbgd.macos.template_debug.framework/Resources/: info.plist
sample/addons/hidusbgd/libhidusbgd.macos.template_release.framework/Resources/: info.plist
sample/scenes/main/: main.gd  main.gd.uid  main.tscn
